--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hunter Bot</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
-    <meta
-      content="Make beautiful websites regardless of your design experience."
-      property="og:description"
-    />
-    <meta
-      content="Make beautiful websites regardless of your design experience."
-      name="description"
-    />
+    <meta key="title" content="Hunter Bot" property="og:title" />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
